ISP20250261 - [] - All the report date no need to lock

--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
@@ -606,12 +606,13 @@
 
 
     function GetPass1(data, targetID) {
+      
         if (targetID.includes('OvenApprover'))
         {
             $(`#${targetID}`).val(data.ID);
             $(`#${targetID}Name`).val(data.Name);
         }
-        els
+        else
         {
             $("#OvenInspector").val(data.ID);
             $("#OvenInspectorName").val(data.Name);
