--- a/Quality/Quality/Areas/BulkFGT/Views/PerspirationFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PerspirationFastness/Detail.cshtml
@@ -256,7 +256,7 @@
                                         @Html.HiddenFor(o => o.Main.BrandID)
                                     </td>
 
-                                    <td style="width: 10vw;"><h5>Reprot Date</h5></td>
+                                    <td style="width: 10vw;"><h5>Report Date</h5></td>
 
                                     <td style="width: 15vw;">
                                         @Html.TextBoxFor(o => Model.Main.InspDate, "{0:yyyy/MM/dd}", new { @class = "date-picker" })
