ISP20250261 -  [] - All the report date no need to lock

--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
@@ -681,6 +681,7 @@
                     async: false,
                     success: function (data) {
                         IsEditModeChange();
+                        $('#ReqOrderID').removeAttr('disabled');
                         $('#btnQuery').click();
                         //if (data.SaveResult) {
                         //    msg.WithSuccess("Success");
